--- a/templates/index.html
+++ b/templates/index.html
@@ -155,7 +155,7 @@
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            ...
+                            <a href="https://github.com/Pranvesh-Kun/Tic-Tac-Toe">Tic-Tac-Toe</a>: A text based Tic-Tac-Toe game made with python scripting.
                         </li>
                     </ul>
                 </div>
