--- a/templates/index.html
+++ b/templates/index.html
@@ -157,6 +157,10 @@
                             <span class="fa-li"><i class="fas fa-check"></i></span>
                             <a href="https://github.com/Pranvesh-Kun/Tic-Tac-Toe">Tic-Tac-Toe</a>: A text based Tic-Tac-Toe game made with python scripting.
                         </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            <a href="https://github.com/Pranvesh-Kun/Watermarking-Desktop-App">Watermarking-Desktop-App</a>: A Watermarking desktop app (GUI) built with tkinter and pillow. Adds images or text as a watermark.
+                        </li>
                     </ul>
                 </div>
             </section>
