--- a/templates/index.html
+++ b/templates/index.html
@@ -161,6 +161,10 @@
                             <span class="fa-li"><i class="fas fa-check"></i></span>
                             <a href="https://github.com/Pranvesh-Kun/Watermarking-Desktop-App">Watermarking-Desktop-App</a>: A Watermarking desktop app (GUI) built with tkinter and pillow. Adds images or text as a watermark.
                         </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            <a href="https://github.com/Pranvesh-Kun/Typing-Speed-Test-GUI">Typing Speed Tester GUI</a>: A Typing Speed Tester which calculates the Net WPM, Gross WPM and accuracy. Built with tkinter.
+                        </li>
                     </ul>
                 </div>
             </section>
