--- a/templates/index.html
+++ b/templates/index.html
@@ -165,6 +165,10 @@
                             <span class="fa-li"><i class="fas fa-check"></i></span>
                             <a href="https://github.com/Pranvesh-Kun/Typing-Speed-Test-GUI">Typing Speed Tester GUI</a>: A Typing Speed Tester which calculates the Net WPM, Gross WPM and accuracy. Built with tkinter.
                         </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            <a href="https://github.com/Pranvesh-Kun/ToDo-List-Website">ToDo List Website</a>: A To-Do list website made with python Flask. It has flask-authentication and is completely made with FLask.
+                        </li>
                     </ul>
                 </div>
             </section>
