--- a/templates/index.html
+++ b/templates/index.html
@@ -168,10 +168,14 @@
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
                             <a href="https://github.com/Pranvesh-Kun/ToDo-List-Website">ToDo List Website</a>: A To-Do list website made with python Flask. It has flask-authentication and is completely made with FLask.
-                        </li>https://github.com/Pranvesh-Kun/TTS-Python-Script
+                        </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
                             <a href="https://github.com/Pranvesh-Kun/TTS-Python-Script">Pdf To Audiobook Convertor</a>: A pdf to audiobook convertor made with python pygame, gTTS and more. Saves the audiobook files in *.mp3 format.
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            <a href="https://github.com/Pranvesh-Kun/Color-Identifying-Website">Image Color Palette Generator Website</a>: An Image color palette generating website made with python flask and bootstrap. It identifies the 10 most used colors in the uploaded image and displays it.
                         </li>
                     </ul>
                 </div>
