--- a/templates/index.html
+++ b/templates/index.html
@@ -177,6 +177,11 @@
                             <span class="fa-li"><i class="fas fa-check"></i></span>
                             <a href="https://github.com/Pranvesh-Kun/Color-Identifying-Website">Image Color Palette Generator Website</a>: An Image color palette generating website made with python flask and bootstrap. It identifies the 10 most used colors in the uploaded image and displays it.
                         </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            <a href="https://github.com/Pranvesh-Kun/Auto-Chrome-Dino-Game-Player">Chrome Dino Game Bot</a>: A python script to open chrome and play the dino game. This is not max efficiency as the cacti spawn is random and sometimes could be unbeatable by this code. It was made with selenium, pyautogui, numpy and pillow with realtime screen identification.
+                        </li>
+                        
                     </ul>
                 </div>
             </section>
