--- a/templates/index.html
+++ b/templates/index.html
@@ -181,7 +181,10 @@
                             <span class="fa-li"><i class="fas fa-check"></i></span>
                             <a href="https://github.com/Pranvesh-Kun/Auto-Chrome-Dino-Game-Player">Chrome Dino Game Bot</a>: A python script to open chrome and play the dino game. This is not max efficiency as the cacti spawn is random and sometimes could be unbeatable by this code. It was made with selenium, pyautogui, numpy and pillow with realtime screen identification.
                         </li>
-                        
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            <a href="https://github.com/Pranvesh-Kun/Yu-Gi-Oh-Card-Searcher-Website">Yu-Gi-Oh! Card Searcher Website</a>: A yugioh card searcher website made with flask, bootstrap, requests and urllib. It displays the card searched along with its description.
+                        </li>
                     </ul>
                 </div>
             </section>
