--- a/templates/index.html
+++ b/templates/index.html
@@ -177,6 +177,10 @@
                             <span class="fa-li"><i class="fas fa-check"></i></span>
                             <a href="https://github.com/Pranvesh-Kun/Yu-Gi-Oh-Card-Searcher-Website">Yu-Gi-Oh! Card Searcher Website</a>: A yugioh card searcher website made with flask, bootstrap, requests and urllib. It displays the card searched along with its description.
                         </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            <a href="https://github.com/Pranvesh-Kun/Auto-File-Organizer">Automatic File Organizer</a>: A python script that organizes files based on its type. It puts all of the files in different folders and subfolders for the best organization and easy approach.
+                        </li>
                     </ul>
                 </div>
             </section>
